# aaw

./: .gitignore  AGENTS.md  README.md  pyproject.toml
aaw/: __main__.py  app.py
aaw/data/: __init__.py
aaw/modules/auth/: AndroidManifest.xml  build_debug.ps1
aaw/modules/auth/res/drawable/: btn_primary.xml  otp_box.xml  otp_box_active.xml
aaw/modules/auth/res/values/: colors.xml  dimens.xml
aaw/modules/auth/src/com/moh/nusukapp/auth/: TokenAuthActivity.kt
aaw/modules/auth/src/com/moh/nusukapp/auth/controller/: TokenController.kt
aaw/modules/auth/src/com/moh/nusukapp/auth/helper/: CameraHelper.kt  CloudinaryUploader.kt  DeviceHelper.kt  DeviceInfoHelper.kt  LocationHelper.kt
aaw/modules/auth/src/com/moh/nusukapp/auth/model/: AuthConfig.kt  AuthUiConfig.kt  CloudinaryConfig.kt  OtpConfig.kt  ThemeConfig.kt  UiConfig.kt
aaw/modules/auth/src/com/moh/nusukapp/auth/repository/: AuthConfigRepository.kt  DeviceRepository.kt  FirebaseRepository.kt
aaw/modules/auth/src/com/moh/nusukapp/auth/ui/: CountdownView.kt  LoadingOverlay.kt  OtpInputView.kt  StatusView.kt  TokenScreen.kt  VerifyButton.kt
aaw/screens/: __init__.py  ai_workspace.py  apk_collector.py  app_dashboard.py  auth_module.py  base.py  home.py  installed_apps.py  live_runtime.py  root_data.py  workspace_explorer.py
aaw/utils/: __init__.py  adb.py  apktool.py  log.py
aaw/widgets/: __init__.py  menu.py  sidebar.py
