[project]
name = "aaw"
version = "1.0.0"
description = "Android Analysis Workspace - Terminal UI for Android App Analysis"
authors = [{name = "AAW Team"}]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.41.0",
    "rich>=13.0.0",
]

[project.scripts]
aaw = "aaw.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
